# kernelSamNeVemImenaSe

./: .gitignore  CMakeLists.txt  Makefile  README.md  bitch.sh  compile_commands.json  launchKernelQEMU.sh
.cache/clangd/index/: config.h.4E6B41BECD4C0E33.idx  idt.c.2FEF51D2A55E0EB3.idx  idt.h.0A8F4948AC4A34FB.idx  io.h.79BE752989154BAE.idx  kernel.c.95A81E2F8F14ED55.idx  kernel.h.27A4D098E2F46A23.idx  memory.c.0C2E794075162D8A.idx  memory.h.FED99FD7AE5117BB.idx
include/: config.h  kernel.h  status.h
include/idt/: idt.h
include/io/: io.h
include/memory/heap/: heap.h  kheap.h
include/memory/paging/: paging.h
scripts/: buildKernel.sh
src/: Makefile  README.md  boot.asm  kernel.asm  kernel.c
src/boot/: boot.asm
src/idt/: idt.asm  idt.c
src/io/: io.asm
src/memory/: memory.c
src/memory/heap/: heap.c  kheap.c
src/memory/paging/: paging.c
src/scripts/: buildKernel.sh  launchKernel.sh
src/src/: boot.asm
